--- a/index.html
+++ b/index.html
@@ -4,7 +4,61 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width">
         <title>Roman Sokolov | rsschool-cv</title>
+        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="./styles/header.css">
+        <link rel="stylesheet" href="./styles/footer.css">
+        <link rel="icon" type="image/ico" href="./images/favicons/favicon.ico">
     </head>
     <body>
+        <header>
+            <div class="container">
+                <nav class="navigation">
+                </nav>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <div class="left-container">
+                    <section class="cv-photo">
+
+                    </section>
+
+                    <section id="education" class="my-education">
+
+                    </section>
+
+                    <section id="contact" class="my-contact">
+
+                    </section> 
+
+                    <section id="language" class="my-language">
+
+                    </section>
+                </div>
+                <div class="right-container">
+                    <section id="about" class="about-me">
+
+                    </section>
+
+                    <section id="skills" class="my-skills">
+
+                    </section>
+
+                    <section id="code" class="code-example">
+
+                    </section>
+
+                    <section id="project" class="my-project">
+
+                    </section>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="container">
+
+            </div>
+        </footer>
     </body>
 </html>
