feat: add new functional - cv menu

--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
         <link rel="stylesheet" href="./styles/footer.css">
         <link rel="icon" type="image/ico" href="./images/favicons/favicon.ico">
     </head>
-    <body>
-        <header>
-            <div class="container">
-                <nav class="navigation">
+    <body class="page">
+        <header class="header">
+                <nav class="container">
+                    <ul class="menu">
+                        <li class="menu-item"><a class="link" href="#about">About</a></li>
+                        <li class="menu-item"><a class="link" href="#contact">Contacts</a></li>
+                        <li class="menu-item"><a class="link" href="#skills">Skills</a></li>
+                        <li class="menu-item"><a class="link" href="#education">Education</a></li>
+                        <li class="menu-item"><a class="link" href="#code">Code</a></li>
+                        <li class="menu-item"><a class="link" href="#project">Project</a></li>
+                    </ul>
                 </nav>
-            </div>
         </header>
-        <main>
+        <main class="main">
             <div class="container">
                 <div class="left-container">
                     <section class="cv-photo">
@@ -55,7 +61,7 @@
                 </div>
             </div>
         </main>
-        <footer>
+        <footer class="footer">
             <div class="container">
 
             </div>
