feat: added footer to cv

--- a/index.html
+++ b/index.html
@@ -158,7 +158,15 @@
         </main>
         <footer class="footer">
             <div class="container">
-
+                <div class="github">
+                    <a class="github" href="https://github.com/rusokolov1987?tab=repositories" target="_blank"><img class="github-link" src="./images/logo/github-mark.png"></a>
+                </div>
+                <div class="date-create">
+                    <p>2022-2023</p>
+                </div>
+                <div class="logo-school">
+                    <a class="rsschool" href="https://rs.school/js/" target="_blank"><img class="rss-photo" src="./images/logo/rs_school.svg"></a>
+                </div>
             </div>
         </footer>
     </body>
