--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <section id="education" class="my-education">
                         <div class="education-list">
                             <div>
-                                <h2>education:</h3>
+                                <h2>education:</h2>
                                 <div class="border"></div>
                             </div>
                             <div>
@@ -74,7 +74,7 @@
                     <section id="language" class="my-language">
                         <div class="language-list">
                             <div>
-                                <h2>language:</h3>
+                                <h2>language:</h2>
                                 <div class="border"></div>
                             </div>
                             <div>
@@ -116,12 +116,12 @@
                         </div>
                         <div>
                             <ul>
-                                <li>HTML (basics)</li>
-                                <li>CSS (basics)</li>
-                                <li>PHP (basics)</li>
-                                <li>Java Core, Java Web</li>
-                                <li>SQL</li>
-                                <li>Linux</li>
+                                <li><p>HTML (basics)</p></li>
+                                <li><p>CSS (basics)</p></li>
+                                <li><p>PHP (basics)</p></li>
+                                <li><p>Java Core, Java Web</p></li>
+                                <li><p>SQL</p></li>
+                                <li><p>Linux</p></li>
                             </ul>
                         </div>
                     </section>
@@ -159,13 +159,13 @@
         <footer class="footer">
             <div class="container">
                 <div class="github">
-                    <a class="github" href="https://github.com/rusokolov1987?tab=repositories" target="_blank"><img class="github-link" src="./images/logo/github-mark.png"></a>
+                    <a class="github" href="https://github.com/rusokolov1987?tab=repositories" target="_blank"><img class="github-link" src="./images/logo/github-mark.png" alt="github"></a>
                 </div>
                 <div class="date-create">
                     <p>2022-2023</p>
                 </div>
                 <div class="logo-school">
-                    <a class="rsschool" href="https://rs.school/js/" target="_blank"><img class="rss-photo" src="./images/logo/rs_school.svg"></a>
+                    <a class="rsschool" href="https://rs.school/js/" target="_blank"><img class="rss-photo" src="./images/logo/rs_school.svg" alt="rsschool"></a>
                 </div>
             </div>
         </footer>
