feat: a new functionality in section navigation

--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
                                 <h2>contact:</h2>
                                 <div class="border"></div>
                             </div>
-                            <div>
-                                <h3>location:</h3>
-                                <p>Petrozavodsk, Russian Federation</p>
-                            </div>
-                            <div>
-                                <h3>phone:</h3>
-                                <p>+7(921)-452-27-78</p>
-                            </div>
-                            <div>
-                                <h3>email:</h3>
-                                <p>rusokolov4@gmail.com</p>
-                            </div>
-                            <div>
-                                <h3>discord:</h3>
-                                <p>@rusokolov1987</p>
-                            </div>
                         </div>
+                            <ul>
+                                <li>
+                                    <h3>location:</h3>
+                                    <ul><li><p>Petrozavodsk, Russian Federation</p></li></ul>
+                                </li>
+                                <li>
+                                    <h3>phone:</h3>
+                                    <ul><li><p>+7(921)-452-27-78</p></li></ul>
+                                </li>
+                                <li>
+                                    <h3>email:</h3>
+                                    <ul><li><p>rusokolov4@gmail.com</p></li></ul>
+                                </li>
+                                <li>
+                                    <h3>discord:</h3>
+                                </li>
+                                <ul><li><p>@rusokolov1987</p></li></ul>
+                            </ul>
                     </section> 
 
                     <section id="education" class="my-education">
@@ -98,7 +100,7 @@
 
                     <section id="about" class="about-me">
                         <div class="about-text">
-                            <h2>aboute:</h2>
+                            <h2>about:</h2>
                             <div class="border"></div>
                             <div class="info-text">
                                 <p>
@@ -147,9 +149,7 @@
                             <h2>project:</h2>
                             <div class="border"></div>
                             <div class="info-text">
-                                <p>
-                                    Nothing yet...
-                                </p>
+                                <a href="https://rusokolov1987.github.io/rsschool-cv/cv"><p>CV-markdown</p></a>
                             </div>
                         </div>
                     </section>
@@ -159,7 +159,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="github">
-                    <a class="github" href="https://github.com/rusokolov1987?tab=repositories" target="_blank"><img class="github-link" src="./images/logo/github-mark.png" alt="github"></a>
+                    <a class="github" href="https://github.com/rusokolov1987" target="_blank"><img class="github-link" src="./images/logo/github-mark.png" alt="github"></a>
                 </div>
                 <div class="date-create">
                     <p>2022-2023</p>
