--- a/plants/plants.html
+++ b/plants/plants.html
@@ -13,8 +13,17 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="./images/logo.png" alt="logo" style="width: 20px; height: 20px;">
+                <p class="logo-text">Plants</p>
             </div>
-            <div class="menu"></div>
+            <div class="menu">
+                <ul class="menu-item">
+                    <li class="menu-text"><a href="#">Home</a></li>
+                    <li class="menu-text"><a href="#">About us</a></li>
+                    <li class="menu-text"><a href="#">Service</a></li>
+                    <li class="menu-text"><a href="#">Price</a></li>
+                    <li class="menu-text"><a href="#">Contacts</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
