feat: added markup into main

--- a/plants/plants.html
+++ b/plants/plants.html
@@ -12,23 +12,27 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="./images/logo.png" alt="logo" style="width: 20px; height: 20px;">
+                <img class="logo-png" src="./images/logo.png" alt="logo">
                 <p class="logo-text">Plants</p>
             </div>
             <div class="menu">
                 <ul class="menu-item">
-                    <li class="menu-text"><a href="#">Home</a></li>
-                    <li class="menu-text"><a href="#">About us</a></li>
-                    <li class="menu-text"><a href="#">Service</a></li>
-                    <li class="menu-text"><a href="#">Price</a></li>
-                    <li class="menu-text"><a href="#">Contacts</a></li>
+                    <li class="menu-text"><a href="#1">Home</a></li>
+                    <li class="menu-text"><a href="#2">About us</a></li>
+                    <li class="menu-text"><a href="#3">Service</a></li>
+                    <li class="menu-text"><a href="#4">Price</a></li>
+                    <li class="menu-text"><a href="#5">Contacts</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main class="main">
-
+        <section class="home" id="1"></section>
+        <section class="about" id="2"></section>
+        <section class="service" id="3"></section>
+        <section class="price" id="4"></section>
+        <section class="contacts" id="5"></section>
     </main>
 
     <footer class="footer">
