--- a/plants/plants.html
+++ b/plants/plants.html
@@ -36,7 +36,11 @@
     </main>
 
     <footer class="footer">
-
+        <div class="content">
+            <div class="footer-data"></div>
+            <div class="label"></div>
+            <div class="social-list"></div>
+        </div>
     </footer>
 </body>
 </html>
