--- a/plants/plants.html
+++ b/plants/plants.html
@@ -7,6 +7,7 @@
     <title>Plants</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
     <header class="header">
@@ -37,9 +38,20 @@
 
     <footer class="footer">
         <div class="content">
-            <div class="footer-data"></div>
-            <div class="label"></div>
-            <div class="social-list"></div>
+            <div class="footer-data">
+                <p class="footer-text">&copy;</p>
+                <p class="footer-text">2022</p>
+                <p class="footer-text">github</p>
+            </div>
+            <div class="label">
+                <p class="footer-text">Rolling Scoopes School</p>
+            </div>
+            <div class="social-list">
+                <a href="#"><img class="social" src="./images/inst 1.png" alt="instagram"></a>
+                <a href="#"><img src="./images/fb 1.png" alt="facebook" class="social"></a>
+                <a href=""><img src="./images/tw 1.png" alt="twitter" class="social"></a>
+                <a href="#"><img src="./images/pinterest 1.png" alt="pinterest" class="social"></a>
+            </div>
         </div>
     </footer>
 </body>
