refactor: rename files into directory images and refactor code into plants.html

--- a/plants/plants.html
+++ b/plants/plants.html
@@ -47,10 +47,10 @@
                 <p class="footer-text">Rolling Scoopes School</p>
             </div>
             <div class="social-list">
-                <a href="#"><img class="social" src="./images/inst 1.png" alt="instagram"></a>
-                <a href="#"><img src="./images/fb 1.png" alt="facebook" class="social"></a>
-                <a href=""><img src="./images/tw 1.png" alt="twitter" class="social"></a>
-                <a href="#"><img src="./images/pinterest 1.png" alt="pinterest" class="social"></a>
+                <a href="#"><img class="social" src="./images/inst.png" alt="instagram"></a>
+                <a href="#"><img src="./images/fb.png" alt="facebook" class="social"></a>
+                <a href=""><img src="./images/tw.png" alt="twitter" class="social"></a>
+                <a href="#"><img src="./images/pinterest.png" alt="pinterest" class="social"></a>
             </div>
         </div>
     </footer>
