refactor: correct code

--- a/plants/plants.html
+++ b/plants/plants.html
@@ -41,7 +41,7 @@
                     <h1>We grow <span class="green-plants">plants</span> and give you oxygen</h1>
                     <p class="welcome-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                     <div class="welcome-btn">
-                        <button class="welcome-button"><p class="welcome-p">LEARN MORE</p></button>
+                        <button class="welcome-button">LEARN MORE</button>
                     </div>
                 </div>
             </div>
@@ -113,15 +113,15 @@
                 <div class="price-content">
                     <h2 class="price-h2">Prices</h2>
                     <div class="price-item">
-                        <form class="price-form" action="" method="post">
+                        <form class="price-form">
                             <select class="price-select">
-                                <option disabled>Basics</option>
+                                <option>Basics</option>
                             </select>
                             <select class="price-select">
-                                <option disabled>Standart</option>
+                                <option>Standart</option>
                             </select>
                             <select class="price-select">
-                                <option disabled>Pro care</option>
+                                <option>Pro care</option>
                             </select>
                         </form>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="text-call-us">
                         <h2 class="call-h2">Our best <span class="green-h2">gardeners</span> are ready to help you</h2>
                         <div class="price-btn">
-                            <button class="price-button"><p class="price-p">Contact us</p></button>
+                            <button class="price-button">Contact us</button>
                         </div>
                         <div class="price-leafs">
                             <img class="leafs-img" alt="leafs" src="./images/content/leafs_small.png">
@@ -146,8 +146,8 @@
             </div>
             <div class="contact-text"><h2 class="contact-h2">Contact us</h2></div>
             <div class="contact-select">
-                <select class="accordion-btn" name="" id="">
-                    <option disabled>City</option>
+                <select class="accordion-btn">
+                    <option>City</option>
                 </select>
             </div>
         </section>
