refactor: correct code

--- a/plants/plants.html
+++ b/plants/plants.html
@@ -142,7 +142,7 @@
 
         <section class="contacts" id="5">
             <div class="contact-woman">
-                <img alt="wooman" src="./images/content/woman.png">
+                <img alt="woman" src="./images/content/woman.png">
             </div>
             <div class="contact-text"><h2 class="contact-h2">Contact us</h2></div>
             <div class="contact-select">
