--- a/plants/index.html
+++ b/plants/index.html
@@ -173,6 +173,6 @@
             </div>
         </div>
     </footer>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
